Fixed icon alignment

--- a/wwwroot/web-components/persistent-object-attribute/attributes/persistent-object-attribute-reference/persistent-object-attribute-reference.scss
+++ b/wwwroot/web-components/persistent-object-attribute/attributes/persistent-object-attribute-reference/persistent-object-attribute-reference.scss
@@ -65,8 +65,14 @@
             }
         }
 
-        a[disabled] {
-            display: none;
+        a {
+            &[disabled] {
+                display: none;
+            }
+
+            vi-icon {
+                height: 100%;
+            }
         }
     }
 
